--- a/about.html
+++ b/about.html
@@ -86,6 +86,9 @@
             <li>
               <a href="#" class="btn get-started-btn">Get Started</a>
             </li>
+            <li>
+              <a href="#" class="btn get-started-btn">Get end</a>
+            </li>
           </ul>
         </div>
       </div>
