new btn get wait

--- a/about.html
+++ b/about.html
@@ -89,6 +89,9 @@
             <li>
               <a href="#" class="btn get-started-btn">Get end</a>
             </li>
+            <li>
+              <a href="#" class="btn get-started-btn">Get wait</a>
+            </li>
           </ul>
         </div>
       </div>
