--- a/about.html
+++ b/about.html
@@ -83,15 +83,16 @@
             <li class="nav-item">
               <a class="nav-link" href="#"><b>Contact</b></a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><b>Demo</b></a>
+            </li>
             <li>
               <a href="#" class="btn get-started-btn">Get Started</a>
             </li>
             <li>
               <a href="#" class="btn get-started-btn">Get end</a>
             </li>
-            <li>
-              <a href="#" class="btn get-started-btn">Get wait</a>
-            </li>
+            
           </ul>
         </div>
       </div>
